discord_themes/addons/alky_SettingsPage.css
/* ... */
#library-inventory-tab [class*="inputDefault-"]::placeholder{
    width: 0;
}
#library-inventory-tab [class*="inputDefault-"]{
    color: transparent;
    background:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1'><text x='10' y='20' fill='rgb(255,255,255,0.3)' font-size='16'>****-*****-*****-*****</text></svg>") no-repeat;
}
/* Enter code prompt */
#library-inventory-tab [class*="h5-"]{
    text-indent: -9999px;
    line-height: 0;
}
#library-inventory-tab [class*="h5-"]:after{
    text-indent: 0px;
    line-height: 16px;
    display: block;
    content: "Enter Nitro or game code below:";
}
#library-inventory-tab .emptyState-2cl8KX {
    background: rgb(0,0,0,0.8);
    border-radius: 12px;
    /*easier background to read on*/
    border: 2px solid var(--main-color);
}
#library-inventory-tab .emptyState-2cl8KX  > :not(h2){
    display: none;
    /*fuck wumpus and fuck gifting nitro*/
}
#library-inventory-tab .emptyState-2cl8KX > p{
    text-indent: -9999px;
    line-height: 0;
}
#library-inventory-tab .emptyState-2cl8KX:before{
    color: var(--main-color);
    line-height: 1.25;
    padding: 1rem 0;
    content: "You have no gifts in your inventory.";
}
/* BILLING */
#billing-tab [class*="codeRedemptionRedirect-"]{
    text-indent: -9999px;
    line-height: 0px;
    text-align: center;
    height: 54px;
}
#billing-tab [class*="codeRedemptionRedirect-"]:after{
    text-indent: 0px;
    line-height: initial;
    display: block;
    content: "Discord keys are now located in ";
    position: relative;
    right: 72px;
    bottom: 17px;
}
#billing-tab [class*="codeRedemptionRedirect-"] a{
    position: relative;
    left: 4890px;
    top: 0;
    line-height: 18px;
    color: var(--white-500);
}
#billing-tab [class*="codeRedemptionRedirect-"] > a:after{
    content: ".";
}
/* APPEARANCE */
#appearance-tab [class*="marginTop8-"]:nth-child(3) [class*="item-"]:first-child [class*="text-md-medium-"],
#appearance-tab [class*="marginTop8-"]:nth-child(3) [class*="item-"]:nth-child(2) [class*="text-md-medium-"]{
    text-indent: -9999px;
    line-height: 0px;
}
#appearance-tab [class*="marginTop8-"]:nth-child(3) [class*="item-"]:first-child [class*="text-md-medium-"]:after{
    text-indent: 0px;
    line-height: initial;
    display: block;
    content: "Default: avatar shown; username above messages.";
}
#appearance-tab [class*="marginTop8-"]:nth-child(3) [class*="item-"]:nth-child(2) [class*="text-md-medium-"]:after{
    text-indent: 0px;
    line-height: initial;
    display: block;
    content: "Compact: username adjacent to messages.";
}
/* Message Display Preview */
#appearance-tab #message-content-0,
#message-content-1,
#message-content-2,
#message-content-3,
#message-content-4{
    text-indent: -9999px;
    line-height: 0px;
    display: inline-block;
}
#appearance-tab #message-content-0:after,
#message-content-1:after,
#message-content-2:after,
#message-content-3:after,
#message-content-4:after{
    text-indent: 0px;
    line-height: var(--message-content-line-height);
    display: block;
}
#appearance-tab [class*="compact-"] #message-content-0:after,
[class*="compact-"] #message-content-1:after,
[class*="compact-"] #message-content-2:after,
[class*="compact-"] #message-content-3:after,
[class*="compact-"] #message-content-4:after{
    line-height: var(--chat-box-username-height);
}
#appearance-tab #message-content-0:after{
    content: "Alpha bravo charlie delta echo foxtrot";
}
#message-content-1:after{
    content: "Golf hotel india juliet kilo lima mike";
}
#message-content-2:after{
    content: "November oscar papa quebec romeo";
}
#message-content-3:after{
    content: "Sierra tango uniform victor whiskey";
}  
#message-content-4:after{
    content: "X-ray yankee zulu";
}  
/* Improved Radiogroups */
#appearance-tab [class*="children-"]{
    flex-direction: row;
    flex-wrap: wrap;

    --radio-spacing: 100px;
}
#appearance-tab [class*="children-"] > :not([class*="marginTop8-"]){
    width: 100%;
}
#appearance-tab [class*="children-"] [class*="marginTop8-"] {
    width: calc(50% - 0.5*var(--radio-spacing, 100px));
}
#appearance-tab [class*="children-"] [class*="marginTop8-"]:nth-child(3) {
    margin-left: var(--radio-spacing,  100px);
}
#appearance-tab [class*="children-"] [class*="marginTop8-"]:nth-child(3) [class*="divider-"]{
    display: none;
}
#appearance-tab [class*="children-"] [class*="marginTop8-"]:nth-child(2) [class*="divider-"]{
    width: calc(200% + 100px);
}
/* VOICE & VIDEO */
/* Input Sensitivity */
#voice-\&-video-tab [style*="background: var(--green-360)"]{
    background: var(--main-color) !important;
}
#voice-\&-video-tab [style*="var(--yellow-300)"]{
    background: rgb(160,160,160) !important;
}
/* Video Settings */
[class*="cameraWrapper-"]{
    background: rgb(var(--main-color-numerical),0.2);
    border: 2px solid var(--main-color);
    border-radius: 10px;
}
[class*="cameraWrapper-"] [class*="previewImage-"]{
    background: url(https://i.imgur.com/ikS6ddE.png) center/contain no-repeat;
}
/* KEYBINDS */
#keybinds-tab .image-20MDYu{
    display: none;
}
/* 2 Columns */
[class*="defaultKeybindGroup-"]{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}
[class*="defaultKeybindGroup-"] > h3,
[class*="defaultKeybindGroup-"] > :nth-child(2){
    width: 50%;
}
[class*="defaultKeybindGroup-"] [class*="divider-"]{
    position: relative;
    left: 99999px;
}
[class*="defaultKeybindGroup-"] [class*="divider-"]:not(:nth-child(2)){
    display: none;  
}
[class*="defaultKeybindGroup-"] > :nth-child(2):not([class*="divider-"]){
    position: relative;
    top: 1.2rem;
    text-indent: -100%;
}
[class*="defaultKeybindGroup-"] [class*="defaultKeybind-"]{
    width: 47.5%;
    min-height: 80px;
    height: fit-content;
}
/* ... */

